--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15-alpine
@@ -13,10 +11,12 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U admin"]
+      test: ["CMD-SHELL", "pg_isready -U admin -d security_app"]
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - web
 
   backend:
     build:
@@ -38,19 +38,41 @@ services:
         condition: service_healthy
     command: sh -c "npm run migrate:prod && npm start"
     restart: unless-stopped
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.backend.rule=Host(`staging.alu.app`)"
+      - "traefik.http.routers.backend.entrypoints=web,websecure"
+      - "traefik.http.routers.backend.tls=true"
+      - "traefik.http.routers.backend.tls.certresolver=le"
+
+    networks:
+      - web
 
   frontend:
     build:
       context: .
       dockerfile: Dockerfile
       args:
-        VITE_API_URL: ${VITE_API_URL:-http://localhost:3001/api}
+        VITE_API_URL: ${VITE_API_URL:-https://staging.alu.app/api}
     container_name: security-frontend
     ports:
       - "3000:3000"
     depends_on:
       - backend
     restart: unless-stopped
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.frontend-alcheemployeeportalv121copy.rule=Host(`attendance.alu.app`)"
+      - "traefik.http.routers.frontend-alcheemployeeportalv121copy.service=frontend-alcheemployeeportalv121copy"
+      - "traefik.http.routers.frontend-alcheemployeeportalv121copy.tls=true"
+      - "traefik.http.routers.frontend-alcheemployeeportalv121copy.entrypoints=web,websecure"
+      - "traefik.http.routers.frontend-alcheemployeeportalv121copy.tls.certresolver=le"
+    networks:
+      - web
 
+networks: #using the traefk default network
+  web:
+    name: dockertraefk_default
+    external: true
 volumes:
   postgres_data:
